log
Fri 26 Apr 2024 07:10:54 PM UTC: 
 hashmap.c | 72 +++++++++++++++++++++++++++++++++++++++++++++------------------
 1 file changed, 52 insertions(+), 20 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:77:57: error: expected ‘)’ before ‘;’ token
   77 |   map->buckets = (Pair **)calloc(capacity, sizeof(Pair*);
      |                                 ~                       ^
      |                                                         )
hashmap.c:82:14: error: expected ‘;’ before ‘}’ token
   82 |   return map;
      |              ^
      |              ;
   83 | }
      | ~             
hashmap.c:83:1: error: control reaches end of non-void function [-Werror=return-type]
   83 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
341e385
Fri 26 Apr 2024 07:12:14 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
0146995
Fri 26 Apr 2024 07:22:14 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
94f30e0
Fri 26 Apr 2024 07:30:04 PM UTC: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|0
78391aa
Fri 26 Apr 2024 07:38:23 PM UTC: 
 hashmap.c | 12 ++++--------
 1 file changed, 4 insertions(+), 8 deletions(-)
 tests:  7|4
total_score: 30/70
f0e620f
Fri 26 Apr 2024 07:39:54 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|4
total_score: 30/70
4aefe2e
Fri 26 Apr 2024 07:52:04 PM UTC: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:95:50: error: expected ‘)’ before ‘{’ token
   95 |     if(is_equal(map->buckets[posicion]->key, key)
      |       ~                                          ^
      |                                                  )
   96 |     {
      |     ~                                             
hashmap.c:107:3: error: expected expression before ‘}’ token
  107 |   }
      |   ^
hashmap.c:109:1: error: control reaches end of non-void function [-Werror=return-type]
  109 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4805b12
Fri 26 Apr 2024 07:52:29 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:109:1: error: control reaches end of non-void function [-Werror=return-type]
  109 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4381c6d
Fri 26 Apr 2024 07:54:22 PM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:114:1: error: control reaches end of non-void function [-Werror=return-type]
  114 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
48d827b
Fri 26 Apr 2024 08:06:12 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:102:91: error: expected statement before ‘)’ token
  102 |       while(is_equal(map->buckets[posicion]->key, key)==0 || map->buckets[posicion]!=NULL))
      |                                                                                           ^
hashmap.c:114:1: error: control reaches end of non-void function [-Werror=return-type]
  114 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
21bedea
Fri 26 Apr 2024 08:12:23 PM UTC: 
 hashmap.c | 17 +++--------------
 1 file changed, 3 insertions(+), 14 deletions(-)
 tests:  9|3
total_score: 40/70
b3b1754
Fri 26 Apr 2024 08:14:01 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  9|3
total_score: 40/70
3e344f9
Fri 26 Apr 2024 08:19:02 PM UTC: 
 hashmap.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  12|2
total_score: 50/70
db76264
